<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ahsr.tortugalpha.AddressActivity">

    <TextView
        android:text="@string/register_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_view_register_adress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="8"
        android:hint="@string/cep_register_adress"
        android:id="@+id/edit_text_cep_register_adress"
        android:layout_below="@+id/text_view_register_adress"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="20"
        android:hint="@string/street_register_adress"
        android:id="@+id/edit_text_street_register_adress"
        android:layout_below="@+id/edit_text_cep_register_adress"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="8"
        android:hint="@string/numb_register_adress"
        android:id="@+id/edit_text_numb_register_adress"
        android:layout_below="@+id/edit_text_street_register_adress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="30"
        android:hint="@string/complement_register_adress"
        android:id="@+id/edit_text_complement_register_adress"
        android:layout_below="@+id/edit_text_numb_register_adress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="30"
        android:hint="@string/neighborhood_register_adress"
        android:id="@+id/edit_text_neighborhood_register_adress"
        android:layout_below="@+id/edit_text_complement_register_adress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="30"
        android:hint="@string/city_register_adress"
        android:id="@+id/edit_text_city_register_adress"
        android:layout_below="@+id/edit_text_neighborhood_register_adress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="30"
        android:hint="@string/state_register_adress"
        android:id="@+id/edit_text_state_register_adress"
        android:layout_below="@+id/edit_text_city_register_adress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="30"
        android:hint="@string/country_register_adress"
        android:id="@+id/edit_text_country_register_adress"
        android:layout_below="@+id/edit_text_state_register_adress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
