<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ahsr.tortugalpha.CustomerAddActivity">

    <TextView
        android:text="@string/title_register_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/text_view_client_register" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:ems="10"
        android:hint="@string/name_register_customer"
        android:id="@+id/edit_text_name_register_customer"
        android:layout_below="@+id/text_view_client_register"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/cpf_register_customer"
        android:id="@+id/edit_text_cpf_register_customer"
        android:layout_below="@+id/edit_text_name_register_customer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email_register_customer"
        android:id="@+id/edit_text_email_register_customer"
        android:layout_below="@+id/edit_text_cpf_register_customer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/phone_register_customer"
        android:id="@+id/edit_text_phone_register_customer"
        android:layout_below="@+id/edit_text_email_register_customer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/dt_borned_register_customer"
        android:id="@+id/edit_text_date_born_register_customer"
        android:layout_below="@+id/edit_text_phone_register_customer"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastrar"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
