<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ahsr.tortuga30.RegisterCustomerActivity">

    <TextView
        android:id="@+id/text_view_customer_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_register_customer" />

    <EditText
        android:id="@+id/edit_text_name_register_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_customer_register"
        android:ems="10"
        android:hint="@string/name_register_customer"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_text_user_name_register_customere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_name_register_customer"
        android:ems="10"
        android:hint="@string/edit_user_name"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_text_password_register_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_user_name_register_customere"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button_register_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_customer" />

</RelativeLayout>
