<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ahsr.tortuga30.LoginActivity">

    <EditText
        android:id="@+id/edit_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/edit_user_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_user_name"
        android:layout_below="@+id/edit_user_name"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edit_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_password"
        android:layout_below="@+id/edit_password"
        android:hint="@string/button_login" />

    <ImageView
        android:id="@+id/imagemTortugaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="92dp"
        app:srcCompat="@drawable/tortuga" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/edit_password"
        android:clickable="true"
        android:hint="@string/register_customer"
        app:backgroundTint="@color/common_google_signin_btn_text_light_disabled"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_input_add" />

</RelativeLayout>
