<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.ahsr.tortuga30.MainActivity">

    <ImageView
        android:id="@+id/tortugaSymbolCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/logo_tortuga" />

    <TextView
        android:id="@+id/textViewCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_customer" />

    <Button
        android:id="@+id/button_request_truck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tortugaSymbolCustomer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:onClick="requestTruckFromCustomer"
        android:text="@string/txt_button_request_truck" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_customer_atendent_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:clickable="true"
        android:onClick="callCustomerToAtendent"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/sym_action_call" />

    <Button
        android:id="@+id/button_view_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_request_truck"
        android:layout_below="@+id/button_request_truck"
        android:layout_marginTop="22dp"
        android:onClick="viewLogRequesCustomer"
        android:text="@string/view_log" />

    <TextView
        android:id="@+id/txCallAtendent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_customer_atendent_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/call_atendent" />

</RelativeLayout>
